--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               <rect width="28" height="28" rx="6" fill="#3b82f6" />
               <path d="M7 14h14M14 7l7 7-7 7" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
             </svg>
-            <span>AlgoVis</span>
+            <span>Animations</span>
           </div>
         </div>
       </header>
@@ -30,7 +30,7 @@
         </div>
 
         <div class="task-grid">
-          <a href="min-heap.html" class="task-card">
+          <a href="min_heap/index.html" class="task-card">
             <div class="task-card-header">
               <div class="task-icon task-icon--active">
                 <svg width="22" height="22" viewBox="0 0 22 22" fill="none">
@@ -50,9 +50,9 @@
             </div>
           </a>
 
-          <div class="task-card task-card--disabled">
+          <a href="max_heap/index.html" class="task-card">
             <div class="task-card-header">
-              <div class="task-icon task-icon--muted">
+              <div class="task-icon task-icon--active">
                 <svg width="22" height="22" viewBox="0 0 22 22" fill="none">
                   <circle cx="11" cy="18" r="3" fill="currentColor" />
                   <circle cx="5" cy="7" r="3" fill="currentColor" />
@@ -61,18 +61,18 @@
                   <line x1="11" y1="15" x2="17" y2="10" stroke="currentColor" stroke-width="1.5" />
                 </svg>
               </div>
-              <span class="task-badge task-badge--soon">Coming Soon</span>
+              <span class="task-badge task-badge--available">Available</span>
             </div>
             <h2 class="task-name">Max Heap</h2>
             <p class="task-desc">See the heapify process in reverse — building a max-heap where parents are always greater.</p>
             <div class="task-footer">
-              <span class="task-cta task-cta--muted">Coming Soon</span>
+              <span class="task-cta">Explore →</span>
             </div>
-          </div>
+          </a>
 
-          <div class="task-card task-card--disabled">
+          <a href="quick_sort/index.html" class="task-card">
             <div class="task-card-header">
-              <div class="task-icon task-icon--muted">
+              <div class="task-icon task-icon--active">
                 <svg width="22" height="22" viewBox="0 0 22 22" fill="none">
                   <line x1="3" y1="6" x2="19" y2="6" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" />
                   <line x1="3" y1="11" x2="13" y2="11" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" />
@@ -80,19 +80,22 @@
                   <polyline points="16,14 19,17 16,20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                 </svg>
               </div>
-              <span class="task-badge task-badge--soon">Coming Soon</span>
+              <span class="task-badge task-badge--available">Available</span>
             </div>
             <h2 class="task-name">QuickSort</h2>
             <p class="task-desc">Watch the divide-and-conquer partitioning strategy of quicksort unfold in real time.</p>
             <div class="task-footer">
-              <span class="task-cta task-cta--muted">Coming Soon</span>
+              <span class="task-cta">Explore →</span>
             </div>
-          </div>
+          </a>
         </div>
       </main>
 
       <footer class="site-footer">
-        <p>Built with vanilla JS · No frameworks</p>
+        <div style="display: flex; align-items: center; gap: 8px; justify-content: center;">
+          <p>Built with vanilla JS · No frameworks</p>
+          <img src="javascript.svg" alt="JavaScript" width="24" height="24" />
+        </div>
       </footer>
     </div>
   </body>
