Added buttons to min-heap

--- a/min_heap/index.html
+++ b/min_heap/index.html
@@ -39,6 +39,11 @@
             spellcheck="false"
           />
           <button class="btn-primary" id="btn-visualize">Visualize</button>
+          <span class="mh-input-label" style="margin-left: 16px;">Value</span>
+          <input type="number" id="value-input" class="mh-input" value="5" style="width:100px" />
+          <button class="btn-primary" id="btn-insert">Insert</button>
+          <button class="btn-primary" id="btn-extract">Extract Root</button>
+          <button class="btn-primary" id="btn-clear">Clear All</button>
         </div>
 
         <div class="mh-vis-area">
@@ -96,13 +101,6 @@
         </div>
       </main>
     </div>
-
-    <footer style="text-align: center; margin-top: 40px; padding: 20px; border-top: 1px solid var(--border); color: var(--text-muted); font-size: 13px;">
-      <div style="display: flex; align-items: center; gap: 8px; justify-content: center;">
-        <span>Built with vanilla JS</span>
-        <img src="../javascript.svg" alt="JavaScript" width="20" height="20" />
-      </div>
-    </footer>
 
     <script src="../js/min-heap.js"></script>
   </body>
