--- a/min_heap/index.html
+++ b/min_heap/index.html
@@ -1,107 +1,108 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Min Heap Visualizer · AlgoVis</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@500&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="../css/style.css" />
-    <link rel="stylesheet" href="../css/min-heap.css" />
-  </head>
-  <body>
-    <div class="mh-layout">
-      <header class="mh-header">
-        <div class="mh-header-inner">
-          <a href="../index.html" class="btn-back">
-            <svg width="14" height="14" viewBox="0 0 14 14" fill="none">
-              <path d="M9 11L5 7l4-4" stroke="currentColor" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
-            Back
-          </a>
-          <span class="mh-header-title">Min Heap Visualizer</span>
-        </div>
-      </header>
 
-      <main class="mh-main">
-        <h1 class="mh-page-title">Min Heap</h1>
-        <p class="mh-page-sub">Bottom-up heapify — transforms any array into a valid min-heap.</p>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Min Heap Visualizer · AlgoVis</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@500&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="../css/min-heap.css" />
+</head>
 
-        <div class="mh-input-section">
-          <span class="mh-input-label">Array</span>
-          <input
-            type="text"
-            id="array-input"
-            class="mh-input"
-            value="9, 4, 7, 2, 6, 1"
-            placeholder="e.g. 9, 4, 7, 2, 6, 1"
-            spellcheck="false"
-          />
+<body>
+  <div class="mh-layout">
+    <header class="mh-header">
+      <div class="mh-header-inner">
+        <a href="../index.html" class="btn-back">
+          <svg width="14" height="14" viewBox="0 0 14 14" fill="none">
+            <path d="M9 11L5 7l4-4" stroke="currentColor" stroke-width="1.75" stroke-linecap="round"
+              stroke-linejoin="round" />
+          </svg>
+          Back
+        </a>
+        <span class="mh-header-title">Min Heap Visualizer</span>
+      </div>
+    </header>
+
+    <main class="mh-main">
+      <div class="mh-input-section">
+        <div>
+          <input type="text" id="array-input" class="mh-input" value="9, 4, 7, 2, 6, 1"
+            placeholder="e.g. 9, 4, 7, 2, 6, 1" spellcheck="false" />
           <button class="btn-primary" id="btn-visualize">Visualize</button>
-          <span class="mh-input-label" style="margin-left: 16px;">Value</span>
+        </div>
+        <div>
           <input type="number" id="value-input" class="mh-input" value="5" style="width:100px" />
           <button class="btn-primary" id="btn-insert">Insert</button>
           <button class="btn-primary" id="btn-extract">Extract Root</button>
           <button class="btn-primary" id="btn-clear">Clear All</button>
         </div>
+      </div>
 
-        <div class="mh-vis-area">
-          <div class="mh-panel">
-            <div class="mh-panel-title">Tree View</div>
-            <div class="mh-tree-container" id="tree-container"></div>
+      <div class="mh-vis-area">
+        <div class="mh-panel">
+          <div class="mh-panel-title">Tree View</div>
+          <div class="mh-tree-container" id="tree-container"></div>
+        </div>
+        <div class="mh-panel">
+          <div class="mh-panel-title">Array View</div>
+          <div class="mh-array-container" id="array-container"></div>
+        </div>
+      </div>
+
+      <div class="mh-controls">
+        <div class="mh-controls-row">
+          <button class="btn-step" id="btn-prev" disabled>
+            <svg width="14" height="14" viewBox="0 0 14 14" fill="none">
+              <path d="M9 11L5 7l4-4" stroke="currentColor" stroke-width="1.75" stroke-linecap="round"
+                stroke-linejoin="round" />
+            </svg>
+            Previous
+          </button>
+          <div class="step-progress">
+            <div class="step-progress-bar" id="progress-bar" style="width: 0%"></div>
           </div>
-          <div class="mh-panel">
-            <div class="mh-panel-title">Array View</div>
-            <div class="mh-array-container" id="array-container"></div>
+          <span class="step-counter" id="step-counter">Step 0 / 0</span>
+          <button class="btn-step" id="btn-next">
+            Next
+            <svg width="14" height="14" viewBox="0 0 14 14" fill="none">
+              <path d="M5 3l4 4-4 4" stroke="currentColor" stroke-width="1.75" stroke-linecap="round"
+                stroke-linejoin="round" />
+            </svg>
+          </button>
+        </div>
+        <div class="mh-message-box">
+          <div class="message-dot" id="message-dot"></div>
+          <span id="message-text">Press "Visualize" to begin, or click Next to step through the default array.</span>
+        </div>
+        <div class="legend">
+          <div class="legend-item">
+            <div class="legend-dot legend-dot--default"></div>
+            Normal
+          </div>
+          <div class="legend-item">
+            <div class="legend-dot legend-dot--compare"></div>
+            Comparing
+          </div>
+          <div class="legend-item">
+            <div class="legend-dot legend-dot--swap"></div>
+            Swapping
+          </div>
+          <div class="legend-item">
+            <div class="legend-dot legend-dot--complete"></div>
+            Complete
           </div>
         </div>
+      </div>
+    </main>
+  </div>
 
-        <div class="mh-controls">
-          <div class="mh-controls-row">
-            <button class="btn-step" id="btn-prev" disabled>
-              <svg width="14" height="14" viewBox="0 0 14 14" fill="none">
-                <path d="M9 11L5 7l4-4" stroke="currentColor" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round" />
-              </svg>
-              Previous
-            </button>
-            <div class="step-progress">
-              <div class="step-progress-bar" id="progress-bar" style="width: 0%"></div>
-            </div>
-            <span class="step-counter" id="step-counter">Step 0 / 0</span>
-            <button class="btn-step" id="btn-next">
-              Next
-              <svg width="14" height="14" viewBox="0 0 14 14" fill="none">
-                <path d="M5 3l4 4-4 4" stroke="currentColor" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round" />
-              </svg>
-            </button>
-          </div>
-          <div class="mh-message-box">
-            <div class="message-dot" id="message-dot"></div>
-            <span id="message-text">Press "Visualize" to begin, or click Next to step through the default array.</span>
-          </div>
-          <div class="legend">
-            <div class="legend-item">
-              <div class="legend-dot legend-dot--default"></div>
-              Normal
-            </div>
-            <div class="legend-item">
-              <div class="legend-dot legend-dot--compare"></div>
-              Comparing
-            </div>
-            <div class="legend-item">
-              <div class="legend-dot legend-dot--swap"></div>
-              Swapping
-            </div>
-            <div class="legend-item">
-              <div class="legend-dot legend-dot--complete"></div>
-              Complete
-            </div>
-          </div>
-        </div>
-      </main>
-    </div>
+  <script src="../js/min-heap.js"></script>
+</body>
 
-    <script src="../js/min-heap.js"></script>
-  </body>
 </html>
