--- a/index.html
+++ b/index.html
@@ -88,6 +88,25 @@
               <span class="task-cta">Explore →</span>
             </div>
           </a>
+
+          <a href="merge_sort/index.html" class="task-card">
+            <div class="task-card-header">
+              <div class="task-icon task-icon--active">
+                <svg width="22" height="22" viewBox="0 0 22 22" fill="none">
+                  <line x1="3" y1="5" x2="19" y2="5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" />
+                  <line x1="3" y1="11" x2="10" y2="11" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" />
+                  <line x1="12" y1="11" x2="19" y2="11" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" />
+                  <polyline points="8,14 11,17 14,14" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
+              </div>
+              <span class="task-badge task-badge--available">Available</span>
+            </div>
+            <h2 class="task-name">MergeSort</h2>
+            <p class="task-desc">See the efficient divide-and-merge strategy of mergesort as it recursively sorts and combines arrays.</p>
+            <div class="task-footer">
+              <span class="task-cta">Explore →</span>
+            </div>
+          </a>
         </div>
       </main>
     </div>
