Fixed bug for QuickSort

--- a/quick_sort/index.html
+++ b/quick_sort/index.html
@@ -55,7 +55,7 @@
               <div class="step-progress-bar" id="progress-bar" style="width: 0%"></div>
             </div>
             <span class="step-counter" id="step-counter">Step 0 / 0</span>
-            <button class="btn-step" id="btn-next">
+            <button class="btn-step" id="btn-next" disabled>
               Next
               <svg width="14" height="14" viewBox="0 0 14 14" fill="none">
                 <path d="M5 3l4 4-4 4" stroke="currentColor" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round" />
@@ -74,7 +74,7 @@
 
           <div class="mh-message-box">
             <div class="message-dot" id="message-dot"></div>
-            <span id="message-text">Press "Visualize" to begin, or click Next to step through the default array.</span>
+            <span id="message-text">Ready to visualize QuickSort</span>
           </div>
           <div class="legend">
             <div class="legend-item">
